--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -392,4 +392,33 @@
 		background-color: #ffffff
 		border-radius: 10px
 		padding-left: 39px
+		position: relative
 
+		&:after
+			position: absolute
+			content: ''
+			bottom: 18px
+			left: 362px
+			width: 185px
+			height: 64px
+			background-image: url('../img/signature.png')
+			background-repeat: no-repeat
+			background-position: right
+
+	&__text 
+		line-height: 1.38em
+		font-size: 1em
+		padding: 16px 1px 2px
+		word-spacing: 0.17em
+		letter-spacing: -0.021em
+		width: 555px
+
+		span 
+			font-weight: 700
+
+
+	
+
+	
+
+	
