--- a/src/templates/page.html
+++ b/src/templates/page.html
@@ -130,8 +130,17 @@ title: PANTOMAX
 				<span class="title-s__dark">Мнение </span>
 				<span class="title-s__hot">врача</span>
 			</h2>
-			<p class="11111111111111">
+			<p class="section-doctor__text">
 				50% мужчин до 35 лет имеют проблемы с эрекцией. Поэтому при первых же признаках необходимо брать быка за рога и решать проблему.
+			</p>
+			<p class="section-doctor__text">
+				Я своим пациентам советую пантовые орешки Пантомакс, это натуральный препарат, который отлично влияет не только на потенцию, но и на весь организм. 
+			</p>
+			<p class="section-doctor__text">
+				При приеме Пантомакс у мужчины нормализуется работа сосудов и повышается потенция. Одним из действий препарата также является улучшение психоэмоциональной составляющей сексуальной жизни. Препарат поможет поддержать эрекцию во время всего полового акта. При этом эффект пантовых орешков не зависит от времени их приема.
+			</p>
+			<p class="section-doctor__text">
+				<span>Ильнур Мухазин, врач-андролог, к.м.н.</span>
 			</p>
 		</div>
 	</section>
