--- a/src/templates/layouts/_layout.html
+++ b/src/templates/layouts/_layout.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8"/>
     <title>{% if title %}{{ title }}{% else %}Template{% endif %}</title>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=no"/>
     <meta name="theme-color" content="#fff"/>
     <meta name="format-detection" content="telephone=no"/>
     <link rel="stylesheet" media="all" href="css/app.css"/>
@@ -15,9 +15,7 @@
   <body>
 
     <!-- BEGIN content -->
-    <div class="out">
-      {% block content %}{% endblock %}
-    </div>
+    {% block content %}{% endblock %}
     <!-- END content -->
 
     <!-- BEGIN scripts -->
