--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -91,6 +91,15 @@
 	-webkit-background-clip: text
 	-webkit-text-fill-color: transparent
 
+	+r(979)
+		font-size: 3em
+
+	+r(780)
+		font-size: 2.5em
+
+	+r(650)
+		font-size: 2em
+
 .main-wrapper 
 	display: flex
 	/*justify-content: space-between*/
