section-question(adaptive)

--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -21,9 +21,15 @@ body
 	padding: 20px 0 0 0
 	word-spacing: 0.1em
 
+	+r(661)
+		padding: 0
+
 	&__light, &__hot, &__light-thin, &__dark 
 		font-size: 3em
 		font-family: 'PT Sans Narrow', sans-serif
+
+		+r(537)
+			font-size: 2.5em
 	
 	&__light 
 		color: #ffffff
