--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -263,21 +263,24 @@
 	margin: 30px 0 0 0
 	background: #ffffff
 	border-radius: 10px
+	background-image: url('../img/form-wrapper-bg.jpg')
+	background-repeat: no-repeat
 	position: relative
-	overflow: hidden
+	// overflow: hidden
 
 	&:before 
 		position: absolute
 		content: ''
-		top: -34px
-		left: -100px
-		width: 490px
-		height: 150px
-		border-radius: 50%
-		background: linear-gradient(167deg, #ad3a18 40%, #431309 53%)
+		top: -10px
+		left: 21px
+		width: 115px
+		height: 21px
+		background-image: url('../img/shine.png')
+	// 	border-radius: 50%
+	// 	background: linear-gradient(167deg, #ad3a18 40%, #431309 53%)
 
 .form-p 
-	margin-top: 136px
+	padding-top: 136px
 
 	&__input 
 		width: 255px
@@ -464,25 +467,30 @@
 .section-description 
 	/*border: 1px solid red*/
 	background-image: url('../img/section-description-bg.jpg')
-	background-position: 440px
+	background-position: right
 	background-repeat: no-repeat
 	background-color: #ffffff
 	height: 392px
 	border-radius: 10px
 	margin-top: 91px
 
-	&__content 
-		/*border: 1px solid red*/
-		width: 590px
-		height: 313px
-		padding: 11px 0 0 40px
-		line-height: 2.44em
+	+r(979)
+		margin-top: 15px
+
+	// &__content 
+	// 	/*border: 1px solid red*/
+	// 	width: 590px
+	// 	// height: 313px
+	// 	padding: 11px 0 0 40px
+	// 	// padding: 11px 390px 0 40px
+	// 	line-height: 2.44em
 	
 	&__text 
 		line-height: 1.63em
 		font-size: 1em
-		padding: 16px 1px 2px 1px
+		padding: 16px 1px 2px 41px
 		word-spacing: 0.17em
+		width: 590px
 
 		span 
 			font-weight: 700
