--- a/src/templates/page.html
+++ b/src/templates/page.html
@@ -96,7 +96,7 @@ title: PANTOMAX
 		</div>
 	</section>
 	<section class="section-description">
-		<div class="section-description__content">
+		<!-- <div class="section-description__content"> -->
 			<h2 class="title-s title-s_left">
 				<span class="title-s__dark">Panto</span>
 				<span class="title-s__hot">MAX</span>
@@ -106,7 +106,7 @@ title: PANTOMAX
 				<span>Пантовые орешки</span> – экопродукт, в состав которого входят натуральные компоненты. Препарат абсолютно совместим с клеточными жидкостями, быстро проникает в кровь и начинает действовать уже через 30 минут. Биогенный комплекс орешек действует на половые и репродуктивные функции мужского организма, эндокринные функции, гормональный статус. Также Название оказывает многоплановое действие на функции 
 				и состояние мозга, сердечно-сосудистой, пищеварительной, нервной, иммунной систем.
 			</p>
-		</div>
+		<!-- </div> -->
 	</section>
 	<section class="section-advantages">
 		<div class="section-advantages__wrapper">
