--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -279,8 +279,61 @@
 	// 	border-radius: 50%
 	// 	background: linear-gradient(167deg, #ad3a18 40%, #431309 53%)
 
+.price
+	// border: 1px solid blue
+	// width: 300px
+	padding: 18px 0 0 25px
+
+.old-price
+	display: inline-block
+	margin-right: 21px
+
+	&__title
+		font-family: 'PT Sans Narrow', sans-serif
+		font-size: 1.05em
+		letter-spacing: 0.02em
+		margin-bottom: -6px
+		opacity: 0.3
+
+	&__cost
+		font-family: 'PT Sans Narrow', sans-serif
+		font-size: 3em
+		letter-spacing: -0.01em
+		padding-left: 1px
+		text-decoration: line-through
+		opacity: 0.3
+
+	&__currency
+		font-family: 'PT Sans Narrow', sans-serif
+		font-size: 1.5em
+		margin-left: -4px
+		letter-spacing: 0.02em
+		opacity: 0.3
+
+.new-price
+	display: inline-block
+
+	&__title
+		font-family: 'PT Sans Narrow', sans-serif
+		font-size: 1.05em
+		letter-spacing: 0.03em
+		margin-bottom: -6px
+
+	&__cost
+		font-family: 'PT Sans Narrow', sans-serif
+		font-size: 3em
+		font-weight: 700
+		letter-spacing: -0.01em
+
+	&__currency
+		font-family: 'PT Sans Narrow', sans-serif
+		font-size: 1.5em
+		text-decoration: none
+		margin-left: -4px
+		letter-spacing: 0.02em
+
 .form-p 
-	padding-top: 136px
+	padding-top: 40px
 
 	&__input 
 		width: 255px
