--- a/src/templates/page.html
+++ b/src/templates/page.html
@@ -36,10 +36,10 @@ title: PANTOMAX
 					<li class="description__item">Получай космические оргазмы</li>
 					<li class="description__item">Гарантированный стояк<br> до 3-х часов</li>
 				</ul>
-				<img src="../img/bottle.png" alt="bottle" class="description__img">
+				<img src="img/bottle.png" alt="bottle" class="description__img">
 			</div>
 			<div class="discount">
-				<img src="../img/50.png" alt="50%" class="discount__img">
+				<img src="img/50.png" alt="50%" class="discount__img">
 				<p class="discount__text">
 					Ваша потенция вернется через 21 день
 					применения! Проверьте сами
