section-description(adaptive)

--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -22,7 +22,7 @@ body
 	word-spacing: 0.1em
 
 	+r(661)
-		padding: 0
+		padding: 5px 5px 0 5px
 
 	&__light, &__hot, &__light-thin, &__dark 
 		font-size: 3em
@@ -50,3 +50,6 @@ body
 		line-height: 2.44em
 		padding: 31px 0 0 40px
 		width: 590px
+
+		+r(600)
+			width: auto
