--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -622,8 +622,13 @@
 	height: 753px
 	/*border: 1px solid red*/
 
+	+r(954)
+		height: 100%
+		background-position: -80px bottom
+
 	&__wrapper 
-		padding: 25px 22px 0 0
+		// padding: 25px 22px 0 0
+		padding: 25px 0 0 0
 	
 	&__content 
 		/*border: 1px solid red*/
@@ -633,6 +638,18 @@
 		flex-wrap: wrap
 		width: 640px
 		height: 550px
+
+		+r(979)
+			width: auto
+			margin: 26px 25px 0 330px
+
+		+r(954)
+			height: 100%
+			justify-content: space-around
+			align-items: center
+
+		+r(774)
+			margin: 26px 25px 0 25px
 	
 	&__item1, &__item2, &__item3, &__item4, &__item5, &__item6 
 		width: 200px
@@ -643,7 +660,14 @@
 		background-repeat: no-repeat
 		font-weight: 700
 		text-align: center
-		padding-top: 189px	
+		padding-top: 189px
+
+		+r(954)
+			margin: 5px
+
+		+r(320)
+			margin: 0 0 5px 0
+			width: 100%
 	
 	&__item1 
 		background-image: url('../img/section-advantages__item1.jpg')
