--- a/src/templates/page.html
+++ b/src/templates/page.html
@@ -164,10 +164,6 @@ title: PANTOMAX
 				<span class="title-s__dark">Мнение </span>
 				<span class="title-s__hot">врача</span>
 			</h2>
-			<!-- <p class="section-description__text">
-				<span>Пантовые орешки</span> – экопродукт, в состав которого входят натуральные компоненты. Препарат абсолютно совместим с клеточными жидкостями, быстро проникает в кровь и начинает действовать уже через 30 минут. Биогенный комплекс орешек действует на половые и репродуктивные функции мужского организма, эндокринные функции, гормональный статус. Также Название оказывает многоплановое действие на функции 
-				и состояние мозга, сердечно-сосудистой, пищеварительной, нервной, иммунной систем.
-			</p> -->
 			<p class="section__text section__text_doctor">
 				50% мужчин до 35 лет имеют проблемы с эрекцией. Поэтому при первых же признаках необходимо брать быка за рога и решать проблему.
 			</p>
@@ -180,6 +176,7 @@ title: PANTOMAX
 			<p class="section__text section__text_doctor">
 				<span class="section__bold">Ильнур Мухазин, врач-андролог, к.м.н.</span>
 			</p>
+			<div class="signature"></div>
 		</div>
 	</section>
 </div>
